--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Lou Kosak <lkosak@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "node-xmpp": "~0.3.2"
+    "node-xmpp": "~0.3.2",
+    "scoped-http-client": "~0.9.7"
   }
 }
